@startuml classes
abstract MonoBehaviour
note left of MonoBehaviour
    From Unity
end note

interface IActivity {
    +Erase()
    +IsEnabled(): bool
    'IsAlive(): bool
}

interface IBulletActivity {
    +Shot(speed: float; angle: float)
}

interface IEnemyActivity {
    +Spawned(speed: float; angle: float; hitPoint: int)
}

interface IPlayerActivity {
    +Spawned()
}

IBulletActivity --|> IActivity
IEnemyActivity --|> IActivity
IPlayerActivity --|> IActivity

interface IPhysicalState {
    -angle: float
    -speed: float
    -rigidBody2D
    +GetPosition(): Vector2
    +SetPosition(position: Vector2)
    +GetAngle(): float
    +SetAngle(angle: float)
    +GetSpeed(): float
    +SetSpeed(speed: float)
}

class AutoDisabling {
    -existingCounter: uint
    -isInside(): bool
    -FixedUpdate()
    -OnEnable()
}

interface IController

MonoBehaviour <|-- AutoDisabling
IActivity <|-- IController
IController --|> IPhysicalState
AutoDisabling ..> IController

interface IInvincibility {
    +IsInvincible(): bool
    +TurnInvincible(frames: uint)
}

class Invincibility {
    -invincibleCounter: int
    -FixedUpdate()
}

IInvincibility <|.. Invincibility
Invincibility --|> MonoBehaviour
IInvincibility <.. MoverController

interface ICollisionHandler {
    -damage: int
    -hitPoint: int
    +GetDamage(): int
    +GetHitPoint(): int
}

abstract CollisionHandler {
    #{abstract} OnTriggerEnter2D(other)
}

class BulletCollisionHandler {
    #OnTriggerEnter2D(other)
}

class EnemyCollisionHandler {
    #OnTriggerEnter2D(other)
}

class PlayerCollisionHandler {
    #OnTriggerEnter2D(other)
}

MonoBehaviour <|-- CollisionHandler
CollisionHandler ..|> ICollisionHandler
CollisionHandler "1" --o IActivity
CollisionHandler <|-- BulletCollisionHandler
CollisionHandler <|-- EnemyCollisionHandler
CollisionHandler <|-- PlayerCollisionHandler

abstract MoverController {
    #{abstract} FixedUpdate()
}

MonoBehaviour <|-- MoverController
MoverController ..|> IController

class BulletController {
    #FixedUpdate()
}

class EnemyController {
    #FixedUpdate()
}

class PlayerController {
    +SetVelocity()
    #FixedUpdate()
}

MoverController <|-- BulletController
BulletController ..|> IBulletActivity
MoverController <|-- EnemyController
EnemyController ..|> IEnemyActivity
PlayerController --|> MoverController
PlayerController ..|> IPlayerActivity

/'class EnemyBullet
class PlayerBullet

EnemyBullet --|> Bullet
PlayerBullet --|> Bullet

class NormalEnemy
class BossEnemy

NormalEnemy --|> Enemy
BossEnemy --|> Enemy'/

class PlayerCharacterController {
    #FixedUpdate()
}

class PlayerOptionController {
    #FixedUpdate()
}

PlayerOptionController --|> PlayerController
PlayerCharacterController --|> PlayerController

class ObjectPool
note left of ObjectPool
    From Unity
end note

abstract MoverManager {
    -pool: List<IActivity>
    +GenerateObject(id: ObjectID)
    +Release(object: IActivity)
}
note left of MoverManager
    Generics
end note

MoverManager ..> ObjectPool

enum BulletID
class BulletManager

BulletManager ..> BulletID
BulletManager --|> MoverManager
IBulletActivity "0..*" --o "1" BulletManager

enum EnemyID
class EnemyManager

EnemyManager ..> EnemyID
EnemyManager --|> MoverManager
IEnemyActivity "0..*" --o "1" EnemyManager

enum PlayerID
class PlayerManager

PlayerManager ..> PlayerID
PlayerManager --|> MoverManager
IPlayerActivity "0..*" --o "1" PlayerManager

abstract SpriteAnimator {
    #{abstract} clipFromImage(countedFrames: int)
    -Update()
}

class BulletAnimator {
    -clip: Sprite
    -spriteRenderer
    #clipFromImage(countedFrames: int)
}

class NormalEnemyAnimator {
    -clips: Sprite[]
    -spriteRenderer
    #clipFromImage(countedFrames: int)
}

class BossEnemyAnimator {
    -clips: Sprite[]
    -spriteRenderer
    #clipFromImage(countedFrames: int)
}

class PlayerCharacterAnimator {
    -clips: Sprite[,]
    -spriteRenderer
    #clipFromImage(countedFrames: int)
}

class PlayerOptionAnimator {
    -clip: Sprite
    -spriteRenderer
    #clipFromImage(countedFrames: int)
}

BulletAnimator --|> SpriteAnimator
NormalEnemyAnimator --|> SpriteAnimator
BossEnemyAnimator --|> SpriteAnimator
PlayerCharacterAnimator --|> SpriteAnimator
PlayerOptionAnimator --|> SpriteAnimator
SpriteAnimator --|> MonoBehaviour
@enduml